# farmos.py.ext

./: .gitignore  .pylintrc  Pipfile  README.md  farm.py  format.py  plant.py  planting.py  pyproject.toml  scratch.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codestyle.yaml  quality.yml  test.yml
ext/: farm.py  output.py  prompt.py
farmer/: __init__.py  area.py  crop_catalog.py  crops.py  expenses.py  others.py  plan.py  planting.py  purchases.py  season_report.py  sensor_plot.py  sensor_upload.py  term.py  weathercloud.py
farmer/ext/: __init__.py  area.py  asset.py  farm.py  farmobj.py  file.py  log.py  others.py  output.py  plan.py  prompt.py  sensor.py  term.py
farmer/reporting/: __init__.py  report.py  rstreport.py
farmos_ext/: __init__.py  asset.py  farm.py  farmobj.py  file.py  log.py
farmos_ext/reporting/: rstreport.py
tests/: test.py  test_farm.py  test_farmobj.py  test_log.py  test_prompt.py  test_quantity.py
tests/integration/: test_area.py  test_farm.py  test_farmobj.py  test_log.py  test_season.py
tests/unit/: test_area.py  test_asset.py  test_farmobj.py  test_log.py  test_others.py  test_prompt.py  test_quantity.py
