[tool.poetry]
name = "farmer"
version = "0.1.0"
description = ""
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
farmOS = "^0.2.0"
colorama = "^0.4.4"
Pygments = "^2.7.2"
click = "^7.1.2"
prompt-toolkit = "^3.0.8"
fuzzyfinder = "^2.1.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
pylint = "^2.6.0"
pytest = "^6.1.2"
coveralls = "^2.2.0"
isort = "^5.6.4"
autopep8 = "^1.5.4"
mock = "^4.0.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
