[tool.poetry]
name = "farmos-ext"
version = "0.1.0"
description = "Extensions to FarmOS API"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
farmOS = "^0.2.0"
colorama = "^0.4.4"
prompt-toolkit = "^3.0.16"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
pylint = "^2.7.0"
pytest = "^6.2.2"
coveralls = "^3.0.0"
isort = "^5.7.0"
autopep8 = "^1.5.5"
mock = "^4.0.3"
pytest-cov = "^2.11.1"
python-semantic-release = "^7.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"